Closed Bug 607882 Opened 13 years ago Closed 13 years ago

shutdown document accessible may stay in cache

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: surkov, Assigned: surkov)

References

Details

(Keywords: access, regression)

Attachments

(1 file)

Attached patch patchSplinter Review
there are cases when outerdoc accessible gets shutdown and then it shutdowns the underlying document accessible so that the document accessible isn't removed from cache. This may lead to crashes if we get notifications for shutdown documents from layout (I saw some from ReResolveStyleContext - patch from bug 606125). It's regression from 570275, prior this bug we didn't shutdown the document accessible from outerdoc accessible shutdown because we traversed DOM tree.

I suggest to allow the document to shutdown itself completely and make him to shutdown its subdocuments.
Attachment #486559 - Flags: review?(ginn.chen)
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Comment on attachment 486559 [details] [diff] [review]
patch

Looks correct to me.


+  for (PRUint32 idx = 0; idx < childDocCount; idx++)
+    mChildDocuments.ElementAt(idx)->Shutdown();

mChildDocuments[idx]->Shutdown();
would be easier for reading.
Attachment #486559 - Flags: review?(ginn.chen) → review+
landed with Ginn's comment addressed - http://hg.mozilla.org/mozilla-central/rev/fe4898e97431
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Keywords: regression
Depends on: 763935
No longer depends on: 763935
You need to log in before you can comment on or make changes to this bug.