Bug 607882 - shutdown document accessible may stay in cache, r=ginn.chen, a=blocking